# wesl_build

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
examples/: shader_size_logger_ext.rs
src/: lib.rs  tests.rs  wgpu_bindings_ext.rs
src/extension/: mod.rs  wgpu_bindings.rs  wgsl_minifier.rs
src/snapshots/: wesl_build__tests__bindings_ext-2.snap  wesl_build__tests__bindings_ext-3.snap  wesl_build__tests__bindings_ext.snap
test/src/shaders/: test2.wgsl
test/src/shaders/test_mod/: test_mod_file.wgsl
wesl_build_example/: Cargo.toml  build.rs
wesl_build_example/src/: main.rs
wesl_build_import/: Cargo.toml  build.rs
wesl_build_import/src/: lib.rs
