[package]
name = "wesl_build"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["wgpu_bindings"]
logging = ["dep:env_logger", "dep:log"]
wgpu_bindings = ["dep:wgsl_to_wgpu"]

[dependencies]
wesl = "0.2"

wgsl_to_wgpu = { version = "0.16", optional = true }

env_logger = { version = "0.11", features = ["auto-color"], default-features = false, optional = true }
log = { version = "0.4", optional = true }

thiserror = "2.0"

[dev-dependencies]
insta = "1.43"
itertools = "0.14"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
