[package]
name = "wesl_build"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/TimTheBig/wesl_build"

keywords = ["wesl", "build", "system", "bindings"]
categories = ["development-tools::build-utils", "graphics"]

[workspace]
members = [".", "wesl_build_import", "wesl_build_example"]

[workspace.dependencies]
wesl = "0.3"

[features]
default = ["wgpu_bindings"]
logging = ["dep:env_logger", "dep:log"]
wgpu_bindings = ["dep:wgsl_to_wgpu"]
wgsl_minifier = ["dep:wgsl-minifier", "dep:naga"]

[dependencies]
wesl.workspace = true

# logging
env_logger = { version = "0.11", features = ["auto-color"], default-features = false, optional = true }
log = { version = "0.4", optional = true }
# errors
thiserror = "2.0"

# extentions
wgsl_to_wgpu = { version = "0.16", optional = true }
wgsl-minifier = { version = "0.8", git = "https://github.com/TimTheBig/wgsl-minifier.git", optional = true }
naga = { version = "28.0", optional = true , features = ["wgsl-in", "wgsl-out"] }

[dev-dependencies]
insta = "1.45"
itertools = "0.14"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
